--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,12 +1,12 @@
-name: Build and test sktime-dl
+name: Build and test sktime-neuro
 
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
     
 env:
   TEST_DIR: tmp/
