--- a/setup.cfg
+++ b/setup.cfg
@@ -18,3 +18,15 @@ description-file = README.md
 
 [bdist_wheel]
 universal=1
+
+[flake8]
+# Default flake8 3.5 ignored flags
+ignore = E121, E123, E126, E226, E24, E704, W503, W504
+# inline with Black code formatter
+max-line-length = 88
+exclude =
+    sktime/contrib/*
+    sktime/_build_utils/*
+extend-ignore =
+    # See https://github.com/PyCQA/pycodestyle/issues/373
+    E203
